# http_server_by_pico_w

./: LICENSE  README.md
HTTP_WEBSITE_STATIC_PAGE/: CMakeLists.txt  README.md  build.sh  lwipopts.h  main.c  makefs.sh  own_fsdata.c
HTTP_WEBSITE_STATIC_PAGE/fs/: 404.html  about.html  contact.html  gallery.html  index.html  sponsor.html
HTTP_WEBSITE_WITH_CGI_SSI/: CMakeLists.txt  Doxyfile  README.md  cgi.c  cgi.h  led.c  led.h  lwipopts.h  main.c  makefsdata  own_fsdata.c  server.c  server.h  ssi.c  ssi.h
HTTP_WEBSITE_WITH_CGI_SSI/fs/: 404.html  about.html  cgi.html  contact.html  gallery.html  index.html  sponsor.html  ssi.shtml
